# ev-pulse-nc

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  INSTALLATION.md  LICENSE  LOCAL-SETUP-GUIDE.md  NOTICE.md  PROJECT-BRIEF.md  PROJECT-EXPLANATION.md  QUICK-REFERENCE.md  README.md  SETUP-CHECKLIST.md  STYLE-GUIDE.md  cspell.json  main.py  pyproject.toml  setup-repo-structure.sh
.claude/: CLAUDE.md  settings.local.json
.githooks/: commit-msg
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  content-guards.yml  pip-audit.yml
code/: README.md
code/python/analysis/: arima_bev_forecast.py  arima_template.py  eda_cejst_justice40.py  eda_census_zip_population.py  eda_phase4_lehd_acs.py  generate_phase1_figures.py  generate_phase3_afdc_eda.py  phase1_fig44_validation_scatter.py  phase3_county_heatmaps.py  phase3_fig25_underserved_choropleth.py  phase3_fig26_to_fig29.py  phase3_fig30_to_fig32.py  phase3_fig33_fig34.py  phase3_gini_inequality.py  phase3_theil_decomposition.py  phase3_top20_underserved.py  phase3_zip_density.py  phase3_zip_mapping.py  phase4_fig35_to_fig38.py  phase4_workplace_charging.py  phase5_climate_sensitivity.py  phase5_fig39_to_fig42.py  phase5_fig43_scoring_barchart.py  phase5_fig45_archetype_scatter.py  phase5_tract_zcta_crosswalk.py  phase5_weight_sensitivity.py  publication_style.py  scoring_framework_final.py  scoring_framework_skeleton.py  scoring_framework_vif.py  validate_sas_forecasts.py
code/python/blog/: __init__.py  blog_graphics.py
code/python/data-acquisition/: afdc_api_download.py  cejst_justice40_download.py  census_county_boundaries.py  census_tract_boundaries.py  census_tract_boundaries_download.py  census_zcta_boundaries.py  census_zip_population.py  lehd_lodes_download.py  ncdot_ev_pipeline.py  ncdot_zev_downloader.py
code/python/data-cleaning/: add_monthdate.py  consolidate_zev_monthly.py
code/python/docs/: generate_pipeline_diagram.py
code/python/evpulse/: __init__.py  constants.py  paths.py  style.py
code/python/paper/: build_docx.py
code/sas/01-data-import/: alt-fuel-stations-import.ctl  ev_charging_units.ctl
competitions/: README.md
competitions/mba-showcase-2026/: README.md
conferences/: README.md
conferences/seinforms-2026/: README.md  abstract.md  cfp-requirements.md  seinforms-submission-plan.md
data/: DATA-DICTIONARY.md  README.md
data/processed/: DATA-DICTIONARY.md  NC_EV_CHARGING_UNITS.xlsx  nc-ev-registrations-2025.qa.txt  nc-ev-registrations-2025.xlsx  scoring-vif-check.csv
data/raw/: AFDC-DATA-COMPARISON.md  NC_EV_PHEV_TS.csv  acs-nc-income-tenure-tracts.csv  afdc-charging-stations-connector-2026-02.csv  alt_fuel_stations_ev_charging_units.csv  cejst-justice40-tracts-nc-border.csv  cejst-justice40-tracts-nc-categories.csv  cejst-justice40-tracts-nc.csv  census-tracts-2010-study-area.geojson  nc-county-boundaries.geojson  nc-zcta-boundaries.geojson  nc-zip-population-acs2022.csv
data/raw/nc-regs-latest-data/: 2025-august-registration-data.xlsx  2025-september-registration-data.xlsx
data/reference-forecasts/: sas-fit-statistics.csv  sas-forecasts.csv  sas-model-info.csv
docs/: BLOG-CREATION-PROTOCOL.md  documentation-drift-report.md  research-notes.md
docs/blog/: BLOG-CREATION-PROTOCOL.md  README.md  consultation.md
docs/figures/: README.md
docs/internal/: BLOG-CREATION-PROTOCOL.md  FUTURE-WORK.md  README.md  tonal-drift-audit.md
docs/internal/sas-screenshots/: README.md
docs/planning/: execution-plan.docx
docs/research/: ai-methodology-disclosure.md  ev-paper-sanyer-et-al.docx  prior-work-theil-ev-charging.md  project-brief.docx  project-explanation.docx
frameworks/: README.md  afdc-api-analysis.md  afdc-data-structure-snapshot-comparison-framework.md  afdc-data-structure.md  afdc-dataset-reference.md  analytical-pipeline.md  ctpp-analysis.md  phase4-workplace-charging.md  post-capstone-roadmap.md  priority-5-afdc-update-decision-framework.md  priority-5-stakeholder-value-integration-analysis.md  proposed-project-titles.md  stakeholder-value-analysis.md  validation-analysis.md  zip-code-analysis.md
output/: README.md
output/models/: README.md
output/validation/: sas-validation-by-county.csv  sas-validation-by-model.csv  sas-validation-comparison.csv  sas-validation-report.txt
paper/: PAPER-BRIEF.md  PAPER-NOTES.md  PROJECT-BRIEF.md  PROJECT-EXPLANATION.md  README.md  build_docx.py  vif-scoring-framework-action-plan.md
references/: data-sources.md
scripts/: generate_pipeline_diagram.py
src/: README.md
src/analysis/: arima_bev_forecast.py  arima_template.py  eda_cejst_justice40.py  eda_census_zip_population.py  eda_phase4_lehd_acs.py  generate_phase1_figures.py  generate_phase3_afdc_eda.py  phase1_fig44_validation_scatter.py  phase3_afdc_eda_figures.py  phase3_afdc_eda_prep.py  phase3_afdc_eda_tables.py  phase3_county_heatmaps.py  phase3_fig25_underserved_choropleth.py  phase3_fig26_to_fig29.py  phase3_fig30_to_fig32.py  phase3_fig33_fig34.py  phase3_gini_inequality.py  phase3_theil_decomposition.py  phase3_top20_underserved.py  phase3_zip_density.py  phase3_zip_mapping.py  phase4_fig35_to_fig38.py  phase4_workplace_charging.py  phase5_climate_sensitivity.py  phase5_fig39_to_fig42.py  phase5_fig43_scoring_barchart.py  phase5_fig45_archetype_scatter.py  phase5_tract_zcta_crosswalk.py  phase5_weight_sensitivity.py  scoring_framework_final.py  scoring_framework_skeleton.py  scoring_framework_vif.py  validate_sas_forecasts.py
src/blog/: __init__.py  blog_graphics.py
src/data-acquisition/: afdc_api_download.py  cejst_justice40_download.py  census_county_boundaries.py  census_tract_boundaries.py  census_zcta_boundaries.py  census_zip_population.py  lehd_lodes_download.py  ncdot_ev_pipeline.py
src/docs/: generate_pipeline_diagram.py
src/evpulse/: arima.py  geo.py  io.py  style.py
src/paper/: build_docx.py  build_seinforms_docx.py
tests/: conftest.py  verify_against_baseline.py
tests/unit/: test_gini.py  test_scoring.py  test_theil.py
tools/: citation_processor.py
(+45 files in other folders)
