[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-pulse-nc"
version = "1.0.0"
description = "North Carolina Electric Vehicle Analytics - Data-driven analysis of EV adoption and charging infrastructure"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Wolfgang Sanyer", email = "wolfgang.sanyer@gmail.com"},
]
maintainers = [
    {name = "Wolfgang Sanyer", email = "wolfgang.sanyer@gmail.com"},
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openpyxl>=3.1.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["evpulse"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv"]
src = ["src"]

[tool.ruff.lint]
# CPY (flake8-copyright) enforces the required authorship/license banner. It is a
# preview rule, so lint.preview must be on; we scope preview to LINT only (not the
# top-level [tool.ruff] preview) so the stable formatter style is unchanged. The
# banner sits at the tail of each module docstring, which CPY001 finds because the
# docstring is short and the banner lands well within CPY001's 4096-byte head scan.
preview = true
select = ["E", "F", "W", "I", "UP", "B", "SIM", "PTH", "RUF", "CPY"]
# en-dash and multiplication-sign are intentional typography in labels and
# docstrings; whitelist them so RUF001-003 still catch unexpected confusables.
allowed-confusables = ["–", "×"]

[tool.ruff.lint.isort]
known-first-party = ["evpulse"]

[tool.ruff.lint.flake8-copyright]
# Match our exact banner copyright line (literal TOML string: no backslash
# escaping). Pins the author so a generic third-party "Copyright 2024 X" notice
# would not satisfy the check.
notice-rgx = '(?i)Copyright\s+©\s+\d{4}\s+Wolfgang Sanyer'

[tool.pyright]
# Scoped to the reusable package: the analysis scripts lean on untyped
# geopandas/matplotlib returns that would drown real findings in noise.
include = ["src/evpulse"]
typeCheckingMode = "basic"
# statsmodels (and geopandas) ship no type stubs; do not flag their absence.
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Unit tests for pure functions and business logic",
    "contract: Contract tests that verify external API assumptions",
    "integration: End-to-end integration tests",
]
minversion = "7.0"
